...
            verticalArrangement = Arrangement.SpaceBetween,
        ) {
            NameInput(
                name = name,
                onSave = onSave,
                focusRequester = focusRequester,
                modifier = Modifier.testTag("name_input"),
                onTextChanged = onTextChanged
            )

            Button(
                onClick = onSave, modifier = Modifier
                    .testTag("submit")
                    .fillMaxWidth()
                    .padding(top = 20.dp)
            ) {
                Text(
                    text = stringResource(R.string.player_add_button_save_label),
                    style = Typography.titleMedium,
...
