...
    ExperimentalMaterial3Api::class,
    ExperimentalAnimationApi::class,
)
@Composable
internal fun ScoreboardLayout(
    state: ScoreboardState,
    addPlayer: () -> Unit,
    updateScore: (String) -> Unit,
    clearScores: () -> Unit,
    fabInitiallyVisible: Boolean = false,
    deleteAllPlayers: () -> Unit,
) {
    val fabVisibilityState = remember(state) {
...
@Preview
@Composable
fun ScoreboardLayoutPreview() {
    ScoreboardLayout(
        state = ScoreboardState(
            score = listOf(
                PlayerStats("Michael", -82),
                PlayerStats("Dwight", 36),
                PlayerStats("Andy", 36),
                PlayerStats("Jim", 13),
                PlayerStats("Pam", 42),
            )
        ),
...
